--- a/views/partials/sidebar-right.ejs
+++ b/views/partials/sidebar-right.ejs
@@ -27,6 +27,11 @@
     </ul>
   </div>
 </aside>
+<!-- Nút mở sidebar (chỉ hiển thị trên mobile, bên trái) -->
+<button id="toggleSidebarBtn" class="fixed bottom-20 left-4 bg-blue-500 text-white p-3 rounded-full shadow-lg z-50 md:hidden">
+  <i class="fas fa-users"></i>
+</button>
+
 
 <!-- Minimized Chat -->
 <div id="minimizedChat" class="fixed bottom-4 right-4 bg-blue-500 text-white p-3 rounded-lg shadow-lg cursor-pointer hidden z-40">
